# 2024-master1-reproduction

./: A_include.h  CMakeLists.txt  main.cpp
Controller/: Control.cpp  Control.h  InnerLoop_S-VUD FLC.cpp  InnerLoop_S-VUD FLC.h  OuterLoop_MPC.cpp  OuterLoop_MPC.h  PID.cpp  PID.h  Thrust_Allocation.cpp  Thrust_Allocation.h
Data/: B_Eta_0.txt  B_Eta_Tau_E.txt  B_Reference_Eta_Tau_E.txt  B_Tau_0.txt  B_Tau_Tau_E.txt  B_Times.txt
Environment/: wave.cpp  wave.h
Model/: dynamics.cpp  dynamics.h  kinematics.cpp  kinematics.h
Params/: params.cpp  params.h
Visualize/: model_UUV.cpp  model_UUV.h  visualize.cpp  visualize.h
